--- a/app/src/main/res/layout/productlist_item.xml
+++ b/app/src/main/res/layout/productlist_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:bind="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -24,10 +25,10 @@
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{adapterModel.title}"
             android:textStyle="bold"
             android:textSize="18sp"
             android:textColor="@color/black"
+            customTextColor="@{adapterModel}"
             android:padding="8dp" />
 
     </LinearLayout>
