--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,21 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="Theme.Shifts2Go" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">@android:color/white</item>
+        <item name="android:windowLightStatusBar">true</item>
+        <!-- Customize your theme here. -->
+    </style>
+
     <style name="Theme.KotlinRoomDBCRUD.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
@@ -20,4 +35,36 @@
     <style name="Theme.KotlinRoomDBCRUD.AppBarOverlay"
         parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="Theme.KotlinRoomDBCRUD.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="CustomTilStyle" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
+        <item name="hintTextColor">@color/hint_color</item>
+        <item name="boxStrokeColor">@color/purple_500</item>
+        <!--        <item name="boxStrokeColor">@color/edtext_stroke_selector</item>-->
+        <item name="boxStrokeWidth">1dp</item>
+        <item name="boxStrokeErrorColor">@color/error</item>
+        <item name="errorTextColor">@color/error</item>
+        <!--<item name="colorControlNormal">@color/colorStrokeGray</item>
+        <item name="colorControlActivated">@color/colorPrimary</item>
+        <item name="colorControlHighlight">@color/colorPrimary</item>
+        <item name="hintTextColor">@color/colorPrimary</item>
+        <item name="boxCornerRadiusBottomStart">@dimen/_3sdp</item>
+        <item name="boxCornerRadiusTopEnd">@dimen/_3sdp</item>
+        <item name="boxCornerRadiusTopStart">@dimen/_3sdp</item>
+        <item name="boxCornerRadiusBottomEnd">@dimen/_3sdp</item>
+        <item name="expandedHintEnabled">false</item>
+        <item name="errorTextAppearance">@style/ErrorText</item>
+        <item name="errorIconDrawable">@null</item>
+        <item name="boxStrokeWidthFocused">1dp</item>-->
+    </style>
+
+    <declare-styleable name="UnderlinedTextView">
+        <attr name="underlineHeight" format="dimension" />
+        <attr name="underlineOffset" format="dimension" />
+        <attr name="underlineColor" format="color" />
+        <attr name="underLinePosition" format="enum">
+            <enum name="baseline" value="0" />
+            <enum name="below" value="1" />
+        </attr>
+    </declare-styleable>
+
 </resources>
